--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
           <div class="row d-flex align-center">
             <div class="col-xs-3">
               <a class="mb-5" href="/">
-                <img src="logo.svg" alt="logo" />
+                <img src="fonts/logo.svg" alt="logo" />
               </a>
             </div>
             <div class="col-xs-6 text-center">
