--- a/src/logout/logout.template.html
+++ b/src/logout/logout.template.html
@@ -1,5 +1,5 @@
 <a ng-click="$ctrl.logout()" href="#">
-  <span class="glyphicon glyphicon-log-out"></span>
+  <span class="glyphicon glyphicon-log-out in-grey-500"></span>
 </a>
 
 <!-- <button ng-click="$ctrl.logout()" type="button" class="btn btn-default mb-5">
