--- a/src/login/login.template.html
+++ b/src/login/login.template.html
@@ -2,31 +2,21 @@
   <div class="col-sm-8 sm-offset-2 md-6 md-offset-3">
     <h2>Sign In</h2>
     <div class="alert alert-danger">
-      <p class="mb-5">Incorrect login or(and) password.</p>
-      <div ng-repeat="error in $ctrl.errors">{{ error }}</div>
+      <div class="mb-5" ng-repeat="error in $ctrl.errors">{{ error }}</div>
     </div>
 
     <form name="loginForm" novalidate
           ng-submit="loginForm.$valid && $ctrl.submitLogin($ctrl.loginForm)">
-
       <div class="form-group mb-20">
         <input type="email" ng-model="$ctrl.loginForm.email" class="form-control"
-                placeholder="Email" required />
+               placeholder="Email" required />
       </div>
-
       <div class="form-group mb-20">
-
         <input type="password" ng-model="$ctrl.loginForm.password" class="form-control"
-                placeholder="Password" required />
+               placeholder="Password" required />
       </div>
-
       <button type="submit" ng-disabled="!loginForm.$valid" class="btn btn-primary mb-15 mr-15 ">Sign In</button>
-
-      <p>Do not have an account? <a href="/sign_up">Sign Up</a></p>
+      <p>Do not have an account? <a ui-sref="signup">Sign Up</a></p>
     </form>
-
-    {{ $ctrl.loginForm }}<br>
-    login form valid? - {{ loginForm.$valid }}
-
   </div>
 </div>
