--- a/src/comments/comments.template.html
+++ b/src/comments/comments.template.html
@@ -1,4 +1,4 @@
 <span class="align-middle d-inline-block mb-5" ng-click="$ctrl.show()">
-  {{ $ctrl.comments.length }}
+  <span ng-show="$ctrl.comments.length > 0">{{ $ctrl.comments.length }}</span>
   <span class="glyphicon glyphicon-comment align-middle d-inline-block mr-5"></span>
 </span>
