--- a/src/create-project-form/create-project-form.template.html
+++ b/src/create-project-form/create-project-form.template.html
@@ -1,3 +1,7 @@
+<div class="alert alert-danger" ng-show="$ctrl.errors.length > 0">
+  <div class="mb-5" ng-repeat="error in $ctrl.errors">{{ error }}</div>
+</div>
+
 <form name="$ctrl.createProjectForm" novalidate
     ng-submit="$ctrl.createProjectForm.$valid && $ctrl.submitCreate()">
   <div class="mb-20">
@@ -10,10 +14,8 @@
     <button type="submit" ng-disabled="!$ctrl.createProjectForm.$valid" class="btn btn-primary mb-15 mr-15 ">
       Create Project
     </button>
-
     <button type="button" ng-click="$ctrl.resetForm()" class="btn btn-default mb-15 mr-15 ">
       Cancel
     </button>
   </div>
-
 </form>
