--- a/src/logout/logout.template.html
+++ b/src/logout/logout.template.html
@@ -1,3 +1,3 @@
-<a ng-click="$ctrl.logout()" href="#">
+<a ng-show="$ctrl.visible()" ng-click="$ctrl.logout()" href="#">
   <span class="glyphicon glyphicon-log-out in-grey-500"></span>
 </a>
