--- a/src/login/login.template.html
+++ b/src/login/login.template.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-8 sm-offset-2 md-6 md-offset-3">
+  <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
     <h2>Sign In</h2>
     <div class="alert alert-danger">
       <div class="mb-5" ng-repeat="error in $ctrl.errors">{{ error }}</div>
