--- a/src/signup/signup.template.html
+++ b/src/signup/signup.template.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-8 sm-offset-2 md-6 md-offset-3">
+  <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
     <h2>Sign Up</h2>
 
     <div class="alert alert-danger">
